Get rid of the need for add-exports compiler args